--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ div.nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    height: 25px;
+    height: 1.563rem;
     width: 100%;
         display: flex;
         justify-content: space-between;
@@ -135,7 +135,7 @@ div.contact-form{
 display: flex;
 justify-content: space-between;
 width: 100%;
-padding: 20px; 
+padding: 1.25rem; 
 box-sizing: border-box;
 }
 ..input-box {
@@ -143,16 +143,16 @@ width: 20rem;
 height: 3rem; 
 padding: 1rem; 
 font-size: 2rem; 
-border: 1px solid #000000; 
-border-radius: 5px; 
+border: 0.09rem solid #000000; 
+border-radius: 0.313rem; 
 box-sizing: border-box; 
 background-color: #97DAAE;
-margin-bottom: 20px; 
+margin-bottom: 1.25rem; 
 }
 
 .form-group,
 .form-group2 {
-margin-bottom: 20px; 
+margin-bottom: 1.25rem; 
 }
 
 .form-group input,
@@ -160,8 +160,8 @@ margin-bottom: 20px;
 width: 100%;
 padding: 1rem; 
 font-size: 2rem; 
-border: 1px solid #000000;
-border-radius: 5px; 
+border: 0.09rem solid #000000;
+border-radius: 0.313rem; 
 box-sizing: border-box; 
 background-color: #97DAAE; 
 }
@@ -175,7 +175,7 @@ width: 100%;
 padding: 1rem; 
 font-size: 2rem; 
 border: none; 
-border-radius: 5px; 
+border-radius: 0.313rem; 
 background-color: #000000; 
 color: #ffffff; 
 cursor: pointer; 
@@ -183,10 +183,10 @@ cursor: pointer;
 
 
 .box {
-width: calc(33.33% - 20px); 
+width: calc(33.33% - 1.25rem); 
 height: 25rem; 
-border: 1px solid black; 
-border-radius: 10px; 
+border: 0.063rem solid black; 
+border-radius: 0.625rem; 
 background-color: #97DAAE; 
 box-sizing: border-box;
 }
