--- a/css.css
+++ b/css.css
@@ -1,3 +1,196 @@
+div.nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 1.563rem;
+    width: 100%;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        position:fixed;
+        background-color: #000000;
+        top: 0; 
+       left: 0; 
+       right: 0; 
+         }
+
+div.sidebar {
+    display: inline;
+    float: inline-end;
+    padding-left: 5rem;
+    text-align:right;
+    font-size: 1.5rem;
+}
+
+a {
+    display:inline;
+    text-decoration: none;
+    color: #ffffff;
+    font-size:1.5rem;
+    text-align:right;
+    padding-right: 3rem;
+
+}
+
+div.portfolio {
+    text-align: left;
+    font-size: 1.5rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+
+
+}
+
+
+
+
+li {
+    font-size: 6.2rem;
+    padding-top: 11rem;
+    margin-top: 11rem;
+    list-style: none;
+    display: inline;
+    margin-right: 0.5rem;
+    width: 100%;
+}
+
+spacer {
+    line-height: 0.2;
+}
+
+.circle {
+    width: 13rem;
+    height: 13rem;
+    border-radius: 50%;
+    background-color: #F5CC39;
+    position: absolute;
+    left: 15rem;
+    top: 30%;
+    animation: pulse 2s infinite alternate;
+    
+}
+@keyframes pulse {
+        0% {
+            transform: scale(1);
+        }
+        100% {
+            transform: scale(1.3);
+        }
+    }
+div.designer {
+    text-align: center;
+    font-size: 3rem;
+    width: 100%;
+    padding-top: 7rem;
+}
+
+div.about {
+    width: 100%;
+    font-size: 4rem;
+    text-align: center;
+    padding-top: 10rem;
+    font-size: 4rem;
+}
+
+div.info {
+    text-align: center;
+    font-size: 2rem;
+    padding-left: 9rem;
+    padding-right: 9rem;
+}
+
+div.projects {
+    width: 100%;
+    font-size: 4rem;
+    text-align: center;
+    padding-top: 10rem;
+    font-size: 4rem;
+}
+
+div.contact {
+    width: 100%;
+    font-size: 2rem;
+    text-align: center;
+    padding-top: 10rem;
+    font-size: 4rem;
+}
+
+div.info2 {
+    text-align: center;
+    font-size: 2rem;
+    padding-left: 9rem;
+    padding-right: 9rem;
+}
+
+div.contact-container {
+    width: 50%;
+    margin: auto;
+   
+}
+div.contact-form{
+    background-color:#97DAAE;
+    height: 25rem;
+}
+.container {
+display: flex;
+justify-content: space-between;
+width: 100%;
+padding: 1.25rem; 
+box-sizing: border-box;
+}
+..input-box {
+width: 20rem; 
+height: 3rem; 
+padding: 1rem; 
+font-size: 2rem; 
+border: 0.09rem solid #000000; 
+border-radius: 0.313rem; 
+box-sizing: border-box; 
+background-color: #97DAAE;
+margin-bottom: 1.25rem; 
+}
+
+.form-group,
+.form-group2 {
+margin-bottom: 1.25rem; 
+}
+
+.form-group input,
+.form-group2 textarea {
+width: 100%;
+padding: 1rem; 
+font-size: 2rem; 
+border: 0.09rem solid #000000;
+border-radius: 0.313rem; 
+box-sizing: border-box; 
+background-color: #97DAAE; 
+}
+
+.form-group2 textarea {
+height: 10rem; 
+}
+
+button[type="submit"] {
+width: 100%; 
+padding: 1rem; 
+font-size: 2rem; 
+border: none; 
+border-radius: 0.313rem; 
+background-color: #000000; 
+color: #ffffff; 
+cursor: pointer; 
+}
+
+
+.box {
+width: calc(33.33% - 1.25rem); 
+height: 25rem; 
+border: 0.063rem solid black; 
+border-radius: 0.625rem; 
+background-color: #97DAAE; 
+box-sizing: border-box;
+}
+
 /* For small devices (phones) */
 @media only screen and (max-width: 600px) {
     /* Adjust styles for small devices */
