--- a/css.css
+++ b/css.css
@@ -191,26 +191,179 @@ background-color: #97DAAE;
 box-sizing: border-box;
 }
 
-/* For small devices (phones) */
-@media only screen and (max-width: 600px) {
-    /* Adjust styles for small devices */
-    body {
-        font-size: 14px;
+@media screen and (max-width: 600px)
+{
+    div.sidebar {
+        display: inline;
+        float: inline-end;
+        padding-left: 1rem;
+        text-align:right;
+        font-size: 1rem;
     }
-}
-
-/* For medium devices (tablets) */
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
-    /* Adjust styles for medium devices */
-    body {
-        font-size: 16px;
+    
+    a {
+        display:inline;
+        text-decoration: none;
+        color: #ffffff;
+        font-size:1rem;
+        text-align:right;
+        padding-right: 1rem;
+    
     }
-}
-
-/* For large devices (desktops) */
-@media only screen and (min-width: 1025px) {
-    /* Adjust styles for large devices */
-    body {
-        font-size: 18px;
+    
+    div.portfolio {
+        text-align: left;
+        font-size: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    
+    
     }
-}
+    
+    
+    
+    
+    li {
+        font-size: 2.5rem;
+        padding:0rem;
+        list-style: none;
+        display: inline;
+        margin: 0rem;
+        width: 200%;
+        line-height:1rem;
+    }
+    
+    spacer {
+        line-height: 0.2;s
+    }
+    
+    .circle {
+        width:5rem;
+        height:5rem;
+        border-radius: 50%;
+        background-color: #F5CC39;
+        position: absolute;
+        left: 15rem;
+        top: 30%;
+        animation: pulse 2s infinite alternate;
+        
+    }
+    @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(1.3);
+            }
+        }
+    div.designer {
+        text-align: center;
+        font-size: 2rem;
+        width: 100%;
+        padding-top: 7rem;
+    }
+    
+    div.about {
+        width: 100%;
+        font-size: 2rem;
+        text-align: center;
+        padding-top: 10rem;
+        font-size: 4rem;
+    }
+    
+    div.info {
+        text-align: center;
+        font-size: 1rem;
+        padding:0%;
+    }
+    
+    div.projects {
+        width: 100%;
+        font-size: 2rem;
+        text-align: center;
+        padding-top: 10rem;
+        font-size: 4rem;
+    }
+    
+    div.contact {
+        width: 100%;
+        font-size: 2rem;
+        text-align: center;
+        padding-top: 10rem;
+        font-size: 4rem;
+    }
+    
+    div.info2 {
+        text-align: center;
+        font-size: 1rem;
+        padding:0%;
+    }
+    
+    div.contact-container {
+        width: 50%;
+        margin: auto;
+       
+    }
+    div.contact-form{
+        background-color:#97DAAE;
+        height: 25rem;
+    }
+    .container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1.25rem; 
+    box-sizing: border-box;
+    }
+    .input-box {
+    width: 20rem; 
+    height: 2rem; 
+    padding: 1rem; 
+    font-size: 2rem; 
+    border: 0.09rem solid #000000; 
+    border-radius: 0.313rem; 
+    box-sizing: border-box; 
+    background-color: #97DAAE;
+    margin-bottom: 1.25rem; 
+    }
+    
+    .form-group,
+    .form-group2 {
+    margin-bottom: 1.25rem; 
+    }
+    
+    .form-group input,
+    .form-group2 textarea {
+    width: 100%;
+    padding: 1rem; 
+    font-size: 2rem; 
+    border: 0.09rem solid #000000;
+    border-radius: 0.313rem; 
+    box-sizing: border-box; 
+    background-color: #97DAAE; 
+    }
+    
+    .form-group2 textarea {
+    height: 10rem; 
+    }
+    
+    button[type="submit"] {
+    width: 100%; 
+    padding: 1rem; 
+    font-size: 2rem; 
+    border: none; 
+    border-radius: 0.313rem; 
+    background-color: #000000; 
+    color: #ffffff; 
+    cursor: pointer; 
+    }
+    
+    
+    .box {
+    width: calc(33.33% - 1.25rem); 
+    height: 10rem; 
+    border: 0.063rem solid black; 
+    border-radius: 0.625rem; 
+    background-color: #97DAAE; 
+    box-sizing: border-box;
+    }
