--- a/css.css
+++ b/css.css
@@ -1,3 +1,7 @@
+@media only screen and (max-width: 800px){
+    flex-direction: column;
+    align-items: center;
+}
 div.nav {
     list-style-type: none;
     margin: 0;
